[package]
name = "sulhyd"
version = "0.1.0"
edition = "2021"
authors = ["H2Sxxa <h2sxxa0w0@gmail.com>"]
repository = "https://github.com/H2Sxxa/sulhyd"
keywords = ["utils","application"]
description = "A package for application developer"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
colored = "2.0.4"
once_cell = "1.18.0"
chrono = "0.4.29"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
serde_derive = "1.0.188"
serde = "1.0.188"
